@@ -377,9 +377,9 @@ function htmlcdnboxes(req,res) {
 	       if (aliasstats[aliasname] !== undefined) {
   `);
   if (req.url.includes('applisdelta=true')) {
-    res.write(' cells[1].innerHTML = aliasstats[aliasname].count - memoaliasstats[aliasname].count;');
+    res.write(' cells[2].innerHTML = aliasstats[aliasname].count - memoaliasstats[aliasname].count;');
   } else {
-    res.write(' cells[1].innerHTML = aliasstats[aliasname].count;');
+    res.write(' cells[2].innerHTML = aliasstats[aliasname].count;');
   }
   res.write(`
                }
@@ -485,11 +485,12 @@ function htmlcdnboxes(req,res) {
   res.write('</table>');
 
   res.write('<table id="talias" class="aliasstats" style="display:' +
-            (req.url.includes('alias=true')?'table':'none') + '"><tr><th>Alias</th><th>Count</th></tr>');
+            (req.url.includes('alias=true')?'table':'none') + '"><tr><th>Alias</th><th>Target</th><th>Count</th></tr>');
   for (const alias of Object.keys(cdnboxStates.alias.aliases)) {
     res.write(
         '<tr><td class="name">' + alias + '</td>' +
-        '<td class="total number">-</td></tr>');
+        '<td class="name">' + cdnboxStates.alias.aliases[alias].target + '</td>' +
+        '<td class="number">-</td></tr>');
   }
   res.write('</table>');
 
@@ -501,10 +502,11 @@ function htmlconsole(req, res) {
   var token = buildtoken(req);
   res.write(`
     <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>CDNBoxd Console</title>
+    <style>` + css + `</style>
     <script>
     window.addEventListener('DOMContentLoaded', (event) => { refreshframes(); });
     function refreshframes() {
-      var framelist = document.getElementsByTagName("iframe");
+      var framelist = document.getElementsByName("cdnboxframe");
       var res = framelist[0].src.match(/token=([0-9]+)-[0-9A-Fa-f]+/);
       if (res === null || res.length < 2 || res[1] - 3000 < Date.now()) {
 	window.location.assign('console' +
@@ -555,7 +557,7 @@ function htmlconsole(req, res) {
       obj.height = height;
     }
     function changeframe() {
-      var x = document.getElementsByTagName("iframe");
+      var x = document.getElementsByName("cdnboxframe");
       for (var i = 0; i < x.length; i++) {
         setframeheight(x[i]);
 	x[i].contentWindow.postMessage( 
@@ -565,9 +567,21 @@ function htmlconsole(req, res) {
       } 
       refreshframes();
     }
+    function aliasmanager() {
+      document.getElementById("aliasmanager").src = '/cdn/aliasmanager';
+      document.getElementById("aliasmanager").style.display = 'block';
+      document.getElementById("overlay").style.display = 'block';
+      window.addEventListener("message", (event) => {
+        if (event.data.aliasmanagerclose) {
+          document.getElementById("aliasmanager").style.display = 'none';
+          document.getElementById("overlay").style.display = 'none';
+        }
+      }, false);
+    }
   `);
   res.write('</script>\n</head>\n<body onload="startautorefresh();">\n');
-  res.write(`<div>
+  res.write(`
+    <div>
       <button type="button" onClick="refreshframes();">Refresh</button>
       <span>Refresh (s): <input type="text" id="refreshtime" value="5" size="5"/></span>
       <button type="button" id="stopaf" onClick="stopautorefresh();">Stop</button>
@@ -584,18 +598,24 @@ function htmlconsole(req, res) {
       <input type="checkbox" id="applisdelta" name="applis"` +
         (req.url.includes('applisdelta=true')?'checked':'') + ` onchange="changeframe();">
       <label for="applisdelta">Derivate</label>
+      <button type="button" id="startam" onClick="aliasmanager('block');">Alias Manager</button>
   </div>\n`);
   for (var i=0; i < cdnboxStates.config.cdnboxes.length; i++ ) {
     var cdnboxState = cdnboxStates[cdnboxStates.config.cdnboxes[i].name];
     if (cdnboxState.config.isns) {
       res.write(
-          '<iframe width="540" src="' +
+          '<iframe width="540" name="cdnboxframe" src="' +
           cdnboxState.config.proto + '//' + cdnboxState.config.hostname + '/cdn/cdnboxes?' +
           token + '&cdnboxes=true" onload="setframeheight(this);"></iframe>\n'
       );
     }
   }
-  res.write('\n</body>\n</html>');
+  res.write(`
+    <div id="overlay"></div>
+    <iframe id="aliasmanager" src=""></iframe>
+  </body>
+  </html>
+  `);
 }
 
 function aliasmanager(res) {
@@ -640,6 +660,9 @@ function aliasmanager(res) {
         xhr.send(jsondoc);
 
       }
+      function aliasmanagerclose () {
+	window.parent.postMessage({ "aliasmanagerclose": true }, window.parent.src);
+      }
     </script>
     </head>
     <body>
@@ -649,6 +672,7 @@ function aliasmanager(res) {
         <span>Release: </span><span id="release">` + cdnboxStates.alias.release + `</span>
         <label for="ttl">TTL:</label><input type="text" size="5" id="ttl" value="` + cdnboxStates.alias.ttl + `">
         <input type="button" value="Reload" onclick="window.location = 'aliasmanager';">
+        <input type="button" value="Close" onclick="aliasmanagerclose();">
         <input type="button" id="update" value="Update" onclick="updatealiases();">
       </div>
       <br/>
