@@ -352,8 +352,13 @@ function replicatealias(fromcdnbox) {
       var data = '';
       lres.on('data', (d) => { data += d; } );
       lres.on('end', () => {
-        var remconfig = JSON.parse(data);
-        cdnboxStates.writealias(remconfig);
+	try {
+          var remconfig = JSON.parse(data);
+          cdnboxStates.writealias(remconfig);
+	} catch (e) {
+          logerror('"error": "alias replication failed: ' + e.message + ' on ' + cdnboxconfig.name + '"');
+          lreq.abort();
+	}
       });
     })
     .on('error', function (cdnboxconfig) {
