@@ -1,3 +1,7 @@
+* 1620166168
+ - add target in console aliases.
+ - fix aliases propagation problem.
+ - move alias manager in console (popup).
 * 1619907148
  - introduce aliases.
 * 1619305431
